change name in dbt_project to fix a warning

--- a/models/_sources.yml
+++ b/models/_sources.yml
@@ -14,5 +14,4 @@ sources:
       - name: nj_002
         description: "transactions for buying tickets and generated revenue of the second cinema"
       - name: nj_003
-        description: "transactions for buying tickets and generated revenue of the third cinema
-   "
+        description: "transactions for buying tickets and generated revenue of the third cinema"
